[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-cache-playground"
package-mode = false
version = "0.1.0"
description = "Interactive KV-Cache Playground for understanding Transformer optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "torch",
    "numpy",
    "pandas",
    "plotly",
    "matplotlib",
    "transformers",
    "requests",
    "tqdm"
]


